--- a/TypeCheckerGenerator/latex/SyntacticUniverse.tex
+++ b/TypeCheckerGenerator/latex/SyntacticUniverse.tex
@@ -18,27 +18,10 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Unit}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Empty}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Nat}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
-\AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Context}\AgdaSpace{}%
@@ -46,9 +29,21 @@
 \AgdaSymbol{(}\AgdaDatatype{Bwd}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSymbol{)}\<%
+\AgdaDatatype{Var}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Level}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{undefined}\<%
 \end{code}
 }
+
+In order that we might program in a syntax independent way, we introduce
+our syntactic universe.
 
 \hide{
 \begin{code}%
@@ -60,7 +55,7 @@
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
+\AgdaPrimitiveType{Set₁}\<%
 \\
 %
 \>[4]\AgdaGeneralizable{Γ}\AgdaSpace{}%
@@ -85,9 +80,9 @@
 \AgdaDatatype{Desc}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{X}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₂}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -95,7 +90,7 @@
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -144,6 +139,19 @@
 \end{code}
 
 \begin{code}%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{⊤}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{tt}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{⊤}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Desc}\AgdaSpace{}%
@@ -154,12 +162,12 @@
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
+\AgdaPrimitiveType{Set₁}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaInductiveConstructor{tag}\AgdaSpace{}%
@@ -234,15 +242,13 @@
 \>[16]\AgdaBound{Ρ}\AgdaSpace{}%
 \AgdaBound{Γ}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaRecord{⊤}\<%
-\\
-\>[0]\<%
+\AgdaDatatype{⊤}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{describe}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{F}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -254,7 +260,7 @@
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -265,7 +271,7 @@
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{describe}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \\
@@ -273,15 +279,15 @@
 \>[2]\AgdaInductiveConstructor{con}%
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{describe}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{describe}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}%
-\>[43]\AgdaSymbol{→}\AgdaSpace{}%
+\>[29]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{describe}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \end{code}
@@ -290,3 +296,91 @@
 
 We now have the required elements to describe a generic language.
 
+\begin{code}%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{IorE}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaInductiveConstructor{intro}\AgdaSpace{}%
+\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{IorE}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{desc-intro}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Desc}\AgdaSpace{}%
+\AgdaFunction{Ty}\<%
+\\
+\>[0]\AgdaFunction{desc-intro}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaPostulate{undefined}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{desc-elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Desc}\AgdaSpace{}%
+\AgdaFunction{Ty}\<%
+\\
+\>[0]\AgdaFunction{desc-elim}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaPostulate{undefined}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{lang}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Desc}\AgdaSpace{}%
+\AgdaFunction{Ty}\<%
+\\
+\>[0]\AgdaFunction{lang}\AgdaSpace{}%
+\AgdaBound{τ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{tag}\AgdaSpace{}%
+\AgdaDatatype{IorE}\AgdaSpace{}%
+\AgdaSymbol{(λ}%
+\>[214I]\AgdaKeyword{where}\<%
+\\
+\>[.][@{}l@{}]\<[214I]%
+\>[21]\AgdaInductiveConstructor{intro}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{tag}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaFunction{desc-intro}\<%
+\\
+%
+\>[21]\AgdaInductiveConstructor{elim}%
+\>[27]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{tag}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaFunction{desc-elim}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{Tm}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bwd}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Ty}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\<%
+\\
+\>[0]\AgdaFunction{Tm}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{τ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{Term}\AgdaSpace{}%
+\AgdaFunction{lang}\AgdaSpace{}%
+\AgdaBound{τ}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\end{code}
