Adding exponent b to unicode

--- a/report/unicode.tex
+++ b/report/unicode.tex
@@ -47,6 +47,8 @@
 \newunicodechar{ⁱ}{\ensuremath{^i}}
 \newunicodechar{ˡ}{\ensuremath{^l}}
 \newunicodechar{ʳ}{\ensuremath{^r}}
+\newunicodechar{ᵇ}{\ensuremath{^b}}
+
 
 \newunicodechar{ᴬ}{\ensuremath{^A}}
 \newunicodechar{ᴮ}{\ensuremath{^B}}
