--- a/report/references.bib
+++ b/report/references.bib
@@ -211,3 +211,19 @@
   biburl    = {https://dblp.org/rec/conf/haskell/McBrideM04.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/toplas/PierceT00,
+  author    = {Benjamin C. Pierce and
+               David N. Turner},
+  title     = {Local type inference},
+  journal   = {{ACM} Trans. Program. Lang. Syst.},
+  volume    = {22},
+  number    = {1},
+  pages     = {1--44},
+  year      = {2000},
+  url       = {https://doi.org/10.1145/345099.345100},
+  doi       = {10.1145/345099.345100},
+  timestamp = {Tue, 06 Nov 2018 12:51:29 +0100},
+  biburl    = {https://dblp.org/rec/journals/toplas/PierceT00.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
