--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -24,6 +24,7 @@
         \part{Building A Type-Checker-Generator}
 	\input{chapters/ProjectPlan.tex}
 	\input{chapters/ALanguageForDescribingTypeSystems.tex}
+        \input{chapters/AnAlternativeLanguageForDescribingTypeSystems.tex}
         \input{chapters/BuildingATypeCheckerGenerator.tex}
         \input{chapters/Discussion.tex}
 	
