Removed old code from previous attempt

--- a/TypeCheckerGenerator/latex/GenericLanguage.tex
+++ b/TypeCheckerGenerator/latex/GenericLanguage.tex
@@ -3,5 +3,10 @@
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{GenericLanguage}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
+
+bananaphone
