--- a/TypeCheckerGenerator/latex/SyntacticUniverse.tex
+++ b/TypeCheckerGenerator/latex/SyntacticUniverse.tex
@@ -24,21 +24,9 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Context}\AgdaSpace{}%
+\AgdaModule{Data.Unit}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{Bwd}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Level}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{undefined}\<%
+\AgdaSymbol{(}\AgdaRecord{⊤}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -47,6 +35,34 @@ our syntactic universe.
 
 \hide{
 \begin{code}%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Bwd}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{ε}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bwd}\AgdaSpace{}%
+\AgdaBound{A}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bwd}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bwd}\AgdaSpace{}%
+\AgdaBound{A}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{private}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -55,23 +71,7 @@ our syntactic universe.
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{Γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Bwd}\AgdaSpace{}%
-\AgdaGeneralizable{X}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{m}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{ℕ}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{n}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{ℕ}\<%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 }
 
@@ -80,9 +80,9 @@ our syntactic universe.
 \AgdaDatatype{Desc}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{X}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₂}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -90,7 +90,7 @@ our syntactic universe.
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -139,19 +139,6 @@ our syntactic universe.
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{⊤}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
-\AgdaKeyword{where}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{tt}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{⊤}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Desc}\AgdaSpace{}%
@@ -162,12 +149,12 @@ our syntactic universe.
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\<%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaInductiveConstructor{tag}\AgdaSpace{}%
@@ -242,145 +229,10 @@ our syntactic universe.
 \>[16]\AgdaBound{Ρ}\AgdaSpace{}%
 \AgdaBound{Γ}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{⊤}\<%
-\end{code}
-
-\begin{code}%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{F}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaGeneralizable{X}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Desc}\AgdaSpace{}%
-\AgdaGeneralizable{X}\AgdaSymbol{)(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaGeneralizable{X}\AgdaSymbol{)(}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Bwd}\AgdaSpace{}%
-\AgdaGeneralizable{X}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
-\AgdaKeyword{where}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{var}%
-\>[7]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{con}%
-\>[7]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{Γ}%
-\>[29]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
+\AgdaRecord{⊤}\<%
 \end{code}
 
 \subsection{Describing a Generic Language}
 
 We now have the required elements to describe a generic language.
 
-\begin{code}%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{IorE}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
-\AgdaKeyword{where}\AgdaSpace{}%
-\AgdaInductiveConstructor{intro}\AgdaSpace{}%
-\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{IorE}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{desc-intro}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Desc}\AgdaSpace{}%
-\AgdaFunction{Ty}\<%
-\\
-\>[0]\AgdaFunction{desc-intro}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaPostulate{undefined}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{desc-elim}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Desc}\AgdaSpace{}%
-\AgdaFunction{Ty}\<%
-\\
-\>[0]\AgdaFunction{desc-elim}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaPostulate{undefined}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{lang}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Desc}\AgdaSpace{}%
-\AgdaFunction{Ty}\<%
-\\
-\>[0]\AgdaFunction{lang}\AgdaSpace{}%
-\AgdaBound{τ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{tag}\AgdaSpace{}%
-\AgdaDatatype{IorE}\AgdaSpace{}%
-\AgdaSymbol{(λ}%
-\>[214I]\AgdaKeyword{where}\<%
-\\
-\>[.][@{}l@{}]\<[214I]%
-\>[21]\AgdaInductiveConstructor{intro}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaInductiveConstructor{tag}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaFunction{desc-intro}\<%
-\\
-%
-\>[21]\AgdaInductiveConstructor{elim}%
-\>[27]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaInductiveConstructor{tag}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaFunction{desc-elim}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{Tm}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Bwd}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Ty}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set₁}\<%
-\\
-\>[0]\AgdaFunction{Tm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{τ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaFunction{lang}\AgdaSpace{}%
-\AgdaBound{τ}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
-\end{code}
